# ReiserRT_CombGenerator

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: ReiserRT_SpectrumConfig.cmake.in
graphics/: PlotNotes.txt
src/: CMakeLists.txt  CombGenerator.cpp  CombGenerator.h  CombGeneratorDataTypes.cpp  CombGeneratorDataTypes.h  CombGeneratorEnvelopeFunkType.cpp  CombGeneratorEnvelopeFunkType.h  CombGeneratorPrivate.cpp  CombGeneratorPrivate.h  CombGeneratorResetParameters.cpp  CombGeneratorResetParameters.h  CombGeneratorScalarVectorTypeFwd.cpp  CombGeneratorScalarVectorTypeFwd.h  RandomPhaseDistributor.cpp  RandomPhaseDistributor.h  RayleighDistributor.cpp  RayleighDistributor.h  ReiserRT_Spectrum.cpp  ScintillationEngine.cpp  ScintillationEngine.h  SharedScalarVectorTypeFwd.cpp  SharedScalarVectorTypeFwd.h  SpectrumGenerator.cpp  SpectrumGenerator.h  SubSeedGenerator.cpp  SubSeedGenerator.h
sundry/: CMakeLists.txt  CombScintillationEnvelopeFunctor.h  energyCalc.cpp  streamCombGen.cpp  streamCombGenerator.cpp  twelveToneComb.cpp
testUtilities/: CMakeLists.txt  CombScintillationEnvelopeFunctor.cpp  CombScintillationEnvelopeFunctor.h  CommandLineParser.cpp  CommandLineParser.h  MiscTestUtilities.cpp  MiscTestUtilities.h  RandomPhaseDistributor.cpp  RandomPhaseDistributor.h  RayleighDistributor.cpp  RayleighDistributor.h  ScintillationEngine.cpp  ScintillationEngine.h  SubSeedGenerator.cpp  SubSeedGenerator.h
tests/: CMakeLists.txt  testCombGenerator.cpp  testConstruction.cpp  testDefaultMagWithEnvelope.cpp  testMagAndPhaseNoEnvelope.cpp  testMagWithEnvelope.cpp  testPureReset.cpp  testRandomPhaseDistributor.cpp  testRayleighDistributor.cpp  testResetDefaults.cpp  testScintillation.cpp  testSubSeedGenerator.cpp
